--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ h2 {
 
 .left {
     flex: 33%;
-    background-color: white;
+    background-color: rgba(0, 255, 0, 0.4);
     padding: 20px;
     border-radius: 20px;
 }
@@ -148,7 +148,7 @@ h2 {
 
 .right {
     flex: 33%;
-    background-color: #d4d2d5;
+    background-color: rgba(255, 0, 0, 0.4);
     padding: 20px;
     border-radius: 20px;
 }
