--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ img {
     max-width: 100%;
 }
 
+.responsive {
+    width: 100%;
+    height: auto;
+}
+
 h1 {
     text-align: center;
     font-size: 80px;
