--- a/style.css
+++ b/style.css
@@ -12,12 +12,12 @@ img {
     max-width: 300px;
     max-height: 300px;
     margin: 10px;
-    max-width: 100%;
 }
 
 .responsive {
     width: 100%;
     height: auto;
+    margin: none;
 }
 
 h1 {
